--- a/finessa/index.html
+++ b/finessa/index.html
@@ -6,8 +6,8 @@
     <title>Finessa Review - Don't Buy Before Reading This!</title>
     <style  type="text/css">
     :root {
-    --primary-color: #1a4378;
-    --secondary-color: #235aa2;
+    --primary-color: #1a3868;
+    --secondary-color: #244e91;
     --warning-color: #dc3545;
     --accent-color: #ffc107;
     --text-color: #212529;
@@ -650,7 +650,17 @@ li{
 }
 
     </style>
-    <script src="https://cdn.jsdelivr.net/gh/opadim/script/cnl.js" defer></script><script>
+    <script src="https://cdn.jsdelivr.net/gh/opadim/script/cnl.js" defer></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17015638902"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17015638902');
+</script><script>
     function click() {
       document.getElementById("goToPage").click();
     }
@@ -687,7 +697,7 @@ li{
             </div>
         </div>
         <div class="container hero-date" style="flex-direction: row;">
-            <time id="date">Published on 10/1/2025 | Source: Official Finessa, Forums and blogs.</time>
+            <time id="date">Published on 10/1/2025 | Source: Finessa Official, Forums and blogs.</time>
         </div>
     </section>
 
@@ -717,14 +727,14 @@ li{
     <section id="3c">
         <div class="container">
             <h2>What is Finessa?</h2>
-            <p>Finessa is a revolutionary formula designed to support your liver, colon health, gut balance and smooth digestion, and keep you effortlessly regular.</p>
+            <p>Finessa is a revolutionary formula created to support your liver, colon health, gut balance, and smooth digestion. It helps you stay regular, break down food easier, supports your gut lining and flush out stubborn waste.</p>
         </div>
     </section>
 
     <section id="como-funciona" id="4c">
         <div class="container">
             <h2>How does Finessa work?</h2>
-            <p>Finessa works by optimizing the gut-liver axis. It helps boost bile flow to break down food faster, supports the gut lining, and flushes out stubborn waste. The ingredients in Finessa also feed the good bacteria in your gut, which are essential for good digestive health.</p>
+            <p>Finessa optimizes the gut-liver axis by supporting a healthy colon, maintaining smooth digestion, and revving up metabolism. It supports bile flow for breaking down food, supports the gut lining, and helps flush out waste.</p>
         </div>
     </section>
 
@@ -736,7 +746,7 @@ li{
 
     <section id="ingredientes" name="5c">
         <div class="container">
-            <h2>Key Ingredients and Their Benefits</h2>
+            <h2>Main Ingredients and Their Benefits</h2>
             <div class="ingredient-grid" id="ingredient-list">
             </div>
         </div>
@@ -745,7 +755,7 @@ li{
     <section id="base-cientifica" class="cientifc-base" name="6c">
         <div class="container">
             <h2>Scientific Basis</h2>
-            <p>The product is based on the science of the gut-liver axis, which is a two-way highway system between your gut and your liver. The gut microbes play a critical role by breaking down food and producing metabolites that influence liver function. Then the liver processes the nutrients absorbed in the gut, produces bile for fat digestion, and supports the detoxification of harmful substances.</p>
+            <p>The formula targets the gut-liver axis, optimizing the communication between the gut and liver for improved digestion and overall health.</p>
             <div class="imgs-cientific">
                 <img src="https://i.imgur.com/EEx4ucp.jpeg" class="img-cientific">
                 <img src="https://i.imgur.com/sR3L8MK.jpeg" class="img-cientific">
@@ -761,7 +771,7 @@ li{
     <section id="mecanismo-acao" name="7c">
         <div class="container">
             <h2>Mechanism of Action</h2>
-            <p>Finessa optimizes the gut-liver axis by supporting the function of both the gut and the liver. The ingredients in Finessa promote the growth of beneficial gut bacteria, support the liver's ability to produce bile, and help to detoxify harmful substances.</p>
+            <p>Finessa's ingredients work synergistically to support the gut-liver axis. Dandelion and Polyphenols help promote beneficial gut bacteria and reduce inflammation. Milk Thistle supports liver function and bile production. Cascara Sagrada gently stimulates bowel movements, while Turmeric and Licorice Extract calm the digestive system and promote healing.</p>
         </div>
     </section>
     <section style="padding: 5px;">
@@ -773,28 +783,28 @@ li{
     <section id="processo-uso" name="8c">
         <div class="container">
             <h2>Usage Process</h2>
-            <p>Simply mix one scoop of Finessa into water or your favorite drink each morning.</p>
+            <p>Mix one scoop of Finessa into water or your favorite drink each morning.</p>
         </div>
     </section>
 
     <section id="tempo-resultados">
         <div class="container">
             <h2>Expected Time for Results</h2>
-            <p>As frequently reported in forums and blogs, Finessa often shows visible results within the first 20 days, and in some cases, within the first 10 days.</p>
+            <p>According to frequently reported information on forums and blogs, Finessa usually shows visible results within the first 20 days, and in some cases, within the first 10 days.</p>
         </div>
     </section>
 
     <section id="problemas-resolve" name="9c">
         <div class="container">
-            <h2>Problems Finessa Solves</h2>
+            <h2>Problems that Finessa Solves</h2>
             <p>Occasional constipation, Bloating, Diarrhea, Sluggish digestion, Low energy levels</p>
         </div>
     </section>
     <section class="warning">
         <div class="container">
-            <h2>Beware!</h2>
-            <p>Counterfeit versions of Finessa are being sold on unofficial websites and marketplaces. In addition to not working, they may put your health at risk.</p>
-            <h3>For your safety, buy only from the official website.</h3>
+            <h2>Careful!</h2>
+            <p>Counterfeit versions of Finessa are being sold on unofficial websites and marketplaces. In addition to not working, they can put your health at risk.</p>
+            <h3>For your safety, only buy from the official website.</h3>
             <a href="https://5e681at9cf-grctes7mk-9al1m.hop.clickbank.net" class="cta-button" >Buy now on the official website</a>
         </div>
     </section>
@@ -811,7 +821,7 @@ li{
     <section class="veredict">
         <div class="container">
             <h2>Final Verdict</h2>
-            <p>Based on our comprehensive analysis of the ingredients, scientific evidence, and user testimonials, Finessa appears to be a legitimate and effective supplement with fast and lasting results. Its natural formula with clinically studied ingredients offers a safe approach to improving metabolic health and therefore this...</p>
+            <p>Based on our comprehensive analysis of ingredients, scientific evidence, and user testimonials, Finessa appears to be a legitimate and effective supplement with fast and lasting results. Its natural formula with clinically studied ingredients offers a safe approach to improving metabolic health and therefore this...</p>
             <p class="approved">APPROVED!</p>
             <img src="https://i.imgur.com/rOeo99a.png" class="img-selos">
         </div>
@@ -819,7 +829,7 @@ li{
     <section id="onde-comprar">
         <div class="container" style="text-align: center;">
             <h2>Where to Buy Finessa</h2>
-            <p>To ensure you are purchasing the original product with guaranteed quality, we recommend buying directly from the manufacturer's official website.</p>
+            <p>To ensure you are acquiring the original product with guaranteed quality, we recommend purchasing directly from the manufacturer's official website.</p>
             <p>There you will also find exclusive promotions and special discounts for readers of this review.</p>
             <a href="https://5e681at9cf-grctes7mk-9al1m.hop.clickbank.net" class="cta-button" >Buy now on the official website</a>
         </div>
@@ -831,13 +841,13 @@ li{
     <footer>
         <div class="container">
             <p>© 2025 coretrustmedia.com. All rights reserved.</p>
-            <p class="disclaimer">Disclaimer: The information contained on this website is for educational purposes only and does not substitute professional medical advice. Individual results may vary. Always consult with a healthcare professional before starting any treatment.</p>
+            <p class="disclaimer">Disclaimer: The information contained on this site is for educational purposes only and is not a substitute for professional medical advice. Individual results may vary. Always consult with a healthcare professional before starting any treatment.</p>
         </div>
     </footer>
 </body>
 <script>
     const initBenefits = () => {
-        const benefits = ["Supports liver and colon health", "Balances gut health", "Promotes smooth digestion and regularity", "Boosts bile flow for faster food breakdown", "Supports healthy cholesterol and balanced blood sugar", "Provides steady energy and revs up metabolism", "Promotes radiant skin and sharper focus"];
+        const benefits = ["Supports liver and colon health", "Promotes gut balance", "Supports smooth digestion and regularity", "Helps achieve a flatter belly", "Supports healthy cholesterol", "Balances blood sugar"];
         for (let index = 0; index < benefits.length; index++) {
         const element = benefits[index];
         const blist = document.getElementById('benefits-list');
@@ -845,7 +855,7 @@ li{
         }
     }
     const initReferences = () => {
-        const references = ["Albillos, A., de Gottardi, A., & Rescigno, M. (2019). The gut-liver axis in liver disease: Pathophysiological basis for therapy.","Konturek, P. C., Harsch, I. A., & Konturek, K. (2018). Gut–liver axis: How do gut bacteria influence the liver?"];
+        const references = ["https://pubmed.ncbi.nlm.nih.gov/31538600/","https://pubmed.ncbi.nlm.nih.gov/29749086/"];
         for (let index = 0; index < references.length; index++) {
         const element = references[index];
         const blist = document.getElementById('references');
@@ -860,7 +870,7 @@ li{
     }
 
     const initIngredients = () => {
-        const ingredients = [{"name":"Taraxacum (Dandelion)","benefits":["Promotes the growth of beneficial gut bacteria","Supports digestion and helps with occasional constipation","Maintains healthy liver and gallbladder function"]},{"name":"Silymarin (Milk Thistle)","benefits":["Supports liver function, crucial for bile production","Aids in breaking down fats and keeps food moving smoothly","Packed with antioxidants, supporting a healthy inflammation response in the gut"]},{"name":"Cascara Sagrada","benefits":["Gently stimulates the muscles in the intestines","Supports digestive rhythm and regular bowel movements","Assists detoxification of waste and toxins"]},{"name":"Cynara Scolymus (Artichoke)","benefits":["Balances the digestive system with fiber","Eases bloating and discomfort","Supports liver function by producing bile"]},{"name":"Turmeric","benefits":["Calming properties to ease gut irritation","Boosts fecal weight and water content for smooth stool transition","Reduces bloating and discomfort"]},{"name":"Licorice Extract","benefits":["Supports blood flow to the gastrointestinal tract to promote tissue healing","Useful in managing occasional digestive discomfort","Exhibits mild laxative properties, aiding in relieving occasional constipation"]},{"name":"Probiotics","benefits":["Balance the gut microbiome with good bacteria","Important for smooth digestion, mood and energy","Help get food moving by boosting how your intestines absorb nutrients and process waste"]},{"name":"Polyphenols","benefits":["Feed the good bacteria in your gut","Supports digestion and a healthy inflammation response","Eases occasional constipation, soothes bloating, and boosts overall gut health"]}];
+        const ingredients = [{"name":"Taraxacum (Dandelion)","benefits":["Promotes the growth of beneficial gut bacteria","Supports digestion","Helps with occasional constipation","Maintains healthy liver and gallbladder function"]},{"name":"Silymarin (Milk Thistle)","benefits":["Supports liver function","Helps produce bile","Helps against occasional constipation and bloating","Packed with antioxidants to support a healthy inflammation response in your gut","Promotes overall digestive health"]},{"name":"Cascara Sagrada","benefits":["Gently stimulates the muscles in the intestines","Helps support digestive rhythm","Encourages regular bowel movements","Assists detoxification of waste and toxins"]},{"name":"Cynara Scolymus","benefits":["Balances the digestive system","Eases issues like bloating and discomfort","Supports your liver","Promotes a happy, healthy gut overall"]},{"name":"Turmeric","benefits":["Calms your digestive system","Soothes gut irritation","Boosts fecal weight and water content","Eases bloating and discomfort","Supports healthy digestion"]},{"name":"Licorice Extract","benefits":["Supports blood flow to the gastrointestinal tract","Promotes the healing of tissues","Manages occasional digestive discomfort","Aids in relieving occasional constipation"]},{"name":"Probiotics","benefits":["Balances your gut microbiome","Promotes smooth digestion","Increases the number of bowel movements","Reduces gut transit time"]},{"name":"Polyphenols","benefits":["Feeds the good bacteria in your gut","Supports digestion to run smoothly","Eases occasional constipation","Supports a healthy inflammation response","Soothes bloating","Boosts overall gut health"]}];
         for (let index = 0; index < ingredients.length; index++) {
             const par =  index % 2 === 1 ;
             const element = ingredients[index];
