--- a/finessa/index.html
+++ b/finessa/index.html
@@ -697,7 +697,7 @@ li{
             </div>
         </div>
         <div class="container hero-date" style="flex-direction: row;">
-            <time id="date">Published on 10/1/2025 | Source: Official Finessa, Forums and blogs.</time>
+            <time id="date">Published on 10/01/2025 | Source: Finessa Official, Forums and blogs.</time>
         </div>
     </section>
 
@@ -727,14 +727,14 @@ li{
     <section id="3c">
         <div class="container">
             <h2>What is Finessa?</h2>
-            <p>Finessa is a revolutionary formula designed to support your liver, colon health, gut balance, and smooth digestion, helping you stay effortlessly regular. It works by optimizing the gut-liver axis, which is a two-way communication system between your gut and liver.</p>
+            <p>Finessa is a dietary supplement designed to optimize the gut-liver axis. It supports a healthy colon, maintains smooth digestion, and boosts metabolism using natural ingredients like Dandelion, Milk Thistle, and Probiotics.</p>
         </div>
     </section>
 
     <section id="como-funciona" id="4c">
         <div class="container">
             <h2>How does Finessa work?</h2>
-            <p>Finessa works by supporting the gut-liver axis. It boosts bile flow to break down food faster and easier, supports the gut lining, and helps flush out stubborn waste. It promotes healthy liver and gallbladder function, detoxification, and a balanced gut microbiome.</p>
+            <p>Finessa works by optimizing the gut-liver axis. It supports the liver in producing bile for fat digestion and helps detoxify harmful substances. It also contains ingredients that promote beneficial gut bacteria, aiding in smoother digestion and more regular bowel movements.</p>
         </div>
     </section>
 
@@ -755,7 +755,7 @@ li{
     <section id="base-cientifica" class="cientifc-base" name="6c">
         <div class="container">
             <h2>Scientific Basis</h2>
-            <p>Finessa targets the gut-liver axis, optimizing the communication between the gut and the liver to support healthy digestion and overall well-being. The gut microbes break down food and produce metabolites that influence liver function, while the liver processes nutrients, produces bile, and detoxifies harmful substances.</p>
+            <p>The product is based on the science of the gut-liver axis and clinical studies, where optimizing the gut liver axis helps you support a healthy colon, maintain smooth digestion and rev up your metabolism.</p>
             <div class="imgs-cientific">
                 <img src="https://i.imgur.com/EEx4ucp.jpeg" class="img-cientific">
                 <img src="https://i.imgur.com/sR3L8MK.jpeg" class="img-cientific">
@@ -771,7 +771,7 @@ li{
     <section id="mecanismo-acao" name="7c">
         <div class="container">
             <h2>Mechanism of Action</h2>
-            <p>Finessa optimizes the gut-liver axis by boosting bile flow to improve food breakdown and nutrient absorption. It also supports the gut lining, helps flush out waste, balances the gut microbiome with probiotics and polyphenols, and leverages the properties of ingredients like dandelion, milk thistle, and turmeric to promote healthy digestion and liver function.</p>
+            <p>Finessa operates by optimizing the gut-liver axis. The gut microbes break down food, producing metabolites that impact liver function. The liver then processes these nutrients, produces bile for fat digestion, and detoxifies harmful substances. Finessa enhances these processes to support digestive health.</p>
         </div>
     </section>
     <section style="padding: 5px;">
@@ -782,29 +782,29 @@ li{
 
     <section id="processo-uso" name="8c">
         <div class="container">
-            <h2>How to Use</h2>
-            <p>Mix one scoop of Finessa into water or your favorite drink each morning and consume it. Consistent daily use is recommended for best results. Taking it in the morning allows the ingredients to work throughout the day, supporting digestion and overall well-being.</p>
+            <h2>Usage Process</h2>
+            <p>Mix one scoop of Finessa into water or your favorite drink each morning and consume it once a day.</p>
         </div>
     </section>
 
     <section id="tempo-resultados">
         <div class="container">
             <h2>Expected Time for Results</h2>
-            <p>As frequently reported in forums and blogs, Finessa often shows visible results in the first 20 days, and in some cases, in the first 10 days.</p>
+            <p>According to frequently reported information in forums and blogs, Finessa often presents visible results in the first 20 days, and in some cases, in the first 10 days.</p>
         </div>
     </section>
 
     <section id="problemas-resolve" name="9c">
         <div class="container">
             <h2>Problems that Finessa Solves</h2>
-            <p>Occasional constipation, Bloating, Diarrhea, Sluggish digestion, Low energy levels</p>
+            <p>Occasional constipation, Bloating, Sluggish digestion, Low energy levels</p>
         </div>
     </section>
     <section class="warning">
         <div class="container">
-            <h2>Warning!</h2>
+            <h2>Beware!</h2>
             <p>Counterfeit versions of Finessa are being sold on unofficial websites and marketplaces. In addition to not working, they can put your health at risk.</p>
-            <h3>For your safety, only buy from the official website.</h3>
+            <h3>For your safety, buy only from the official website.</h3>
             <a href="https://5e681at9cf-grctes7mk-9al1m.hop.clickbank.net" class="cta-button" >Buy now on the official website</a>
         </div>
     </section>
@@ -821,7 +821,7 @@ li{
     <section class="veredict">
         <div class="container">
             <h2>Final Verdict</h2>
-            <p>Based on our thorough analysis of ingredients, scientific evidence, and user testimonials, Finessa appears to be a legitimate and effective supplement with fast and lasting results. Its natural formula with clinically studied ingredients offers a safe approach to improving metabolic health and therefore this...</p>
+            <p>Based on our comprehensive analysis of ingredients, scientific evidence, and user testimonials, Finessa appears to be a legitimate and effective supplement with fast and lasting results. Its natural formula with clinically studied ingredients offers a safe approach to improving metabolic health and therefore this...</p>
             <p class="approved">APPROVED!</p>
             <img src="https://i.imgur.com/rOeo99a.png" class="img-selos">
         </div>
@@ -829,7 +829,7 @@ li{
     <section id="onde-comprar">
         <div class="container" style="text-align: center;">
             <h2>Where to Buy Finessa</h2>
-            <p>To ensure you are purchasing the original product with guaranteed quality, we recommend buying directly from the manufacturer's official website.</p>
+            <p>To ensure you are purchasing the original product with a quality guarantee, we recommend buying directly from the manufacturer's official website.</p>
             <p>There you will also find exclusive promotions and special discounts for readers of this review.</p>
             <a href="https://5e681at9cf-grctes7mk-9al1m.hop.clickbank.net" class="cta-button" >Buy now on the official website</a>
         </div>
@@ -841,13 +841,13 @@ li{
     <footer>
         <div class="container">
             <p>© 2025 coretrustmedia.com. All rights reserved.</p>
-            <p class="disclaimer">Disclaimer: The information contained on this website is for educational purposes only and does not substitute professional medical advice. Individual results may vary. Always consult with a healthcare professional before starting any treatment.</p>
+            <p class="disclaimer">Disclaimer: The information contained on this site is for educational purposes only and does not substitute professional medical advice. Individual results may vary. Always consult with a healthcare professional before starting any treatment.</p>
         </div>
     </footer>
 </body>
 <script>
     const initBenefits = () => {
-        const benefits = ["Supports liver and colon health", "Promotes gut balance", "Helps with occasional constipation, bloating, and diarrhea", "Boosts metabolism", "Supports healthy cholesterol and balanced blood sugar"];
+        const benefits = ["Supports liver and colon health", "Promotes gut balance", "Aids smooth digestion", "Helps with occasional constipation and bloating", "Supports healthy cholesterol and blood sugar", "Boosts energy levels", "Revvs up metabolism"];
         for (let index = 0; index < benefits.length; index++) {
         const element = benefits[index];
         const blist = document.getElementById('benefits-list');
@@ -855,7 +855,7 @@ li{
         }
     }
     const initReferences = () => {
-        const references = ["https://www.example.com/Albillos_GutLiverAxis","https://www.example.com/Konturek_GutBacteriaLiver","https://www.example.com/Li_DandelionGastro","https://www.example.com/Jin_DandelionGastric","https://www.example.com/Karimi_SilymarinPharma","https://www.example.com/Jin_SilymarinLiver","https://www.example.com/Garilli_CascaraSagrada","https://www.example.com/Tramonte_Constipation","https://www.example.com/Costabile_ArtichokeBifido","https://www.example.com/Sasaki_ArtichokeGut","https://www.example.com/Dulbecco_CurcuminDigestive","https://www.example.com/Scazzocchio_CurcuminMicrobio","https://www.example.com/Pizzorno_Licorice","https://www.example.com/Authier_LicoriceGut","https://www.example.com/Corliss_Probiotics","https://www.example.com/Bodke_ProbioticsHealth","https://www.example.com/Ma_PolyphenolMicrobio","https://www.example.com/Santos_PolyphenolPrebiotics","https://www.example.com/Jawhara_PolyphenolGut"];
+        const references = ["https://www.example.com/Albillos","https://www.example.com/Konturek","https://www.example.com/Li","https://www.example.com/Jin","https://www.example.com/Karimi","https://www.example.com/Wang","https://www.example.com/Garilli","https://www.example.com/Tramonte","https://www.example.com/Costabile","https://www.example.com/Sasaki","https://www.example.com/Dulbecco","https://www.example.com/Scazzocchio","https://www.example.com/Pizzorno","https://www.example.com/Authier","https://www.example.com/Corliss","https://www.example.com/Bodke","https://www.example.com/Ma","https://www.example.com/Santos","https://www.example.com/Jawhara"];
         for (let index = 0; index < references.length; index++) {
         const element = references[index];
         const blist = document.getElementById('references');
@@ -870,7 +870,7 @@ li{
     }
 
     const initIngredients = () => {
-        const ingredients = [{"name":"Taraxacum (Dandelion)","benefits":["Promotes growth of beneficial gut bacteria (prebiotic)","Supports digestion","Helps with occasional constipation","Maintains healthy liver and gallbladder function"]},{"name":"Silymarin (Milk Thistle)","benefits":["Supports liver function by producing bile","Helps break down fats","Promotes overall digestive health","Helps against occasional constipation and bloating","Antioxidant properties"]},{"name":"Cascara Sagrada","benefits":["Stimulates muscles in the intestines","Encourages regular bowel movements","Assists detoxification of waste and toxins"]},{"name":"Cynara Scolymus (Artichoke)","benefits":["Balances the digestive system","Eases bloating and discomfort","Supports liver function (bile production)"]},{"name":"Turmeric (Curcumin)","benefits":["Calms the digestive system","Soothes gut irritation","Promotes smooth stool transition","Eases bloating and discomfort"]},{"name":"Licorice Extract","benefits":["Supports blood flow to the gastrointestinal tract","Promotes healing of tissues","Manages occasional digestive discomfort","Aids in relieving occasional constipation"]},{"name":"Probiotics","benefits":["Balances gut microbiome","Promotes smooth digestion","Boosts nutrient absorption and waste processing"]},{"name":"Polyphenols","benefits":["Feeds good bacteria in the gut","Supports smooth digestion","Eases occasional constipation","Supports gut bacteria"]}];
+        const ingredients = [{"name":"Taraxacum (Dandelion)","benefits":["Promotes growth of beneficial gut bacteria","Supports digestion","Helps with occasional constipation","Maintains healthy liver and gallbladder function"]},{"name":"Silymarin (Milk Thistle)","benefits":["Supports liver function and bile production","Helps break down fats","Supports a healthy inflammation response in the gut","Promotes overall digestive health"]},{"name":"Cascara Sagrada","benefits":["Gently stimulates muscles in the intestines","Encourages regular bowel movements","Assists detoxification of waste and toxins"]},{"name":"Cynara Scolymus (Artichoke)","benefits":["Balances the digestive system","Eases bloating and discomfort","Supports liver function and bile production","Relieves occasional constipation"]},{"name":"Turmeric","benefits":["Calms the digestive system","Soothes gut irritation","Eases bloating and discomfort","Supports healthy digestion"]},{"name":"Licorice Extract","benefits":["Supports blood flow to the gastrointestinal tract","Promotes tissue healing","Manages occasional digestive discomfort","Aids in relieving occasional constipation"]},{"name":"Probiotics","benefits":["Balances gut microbiome","Supports smooth digestion","Boosts how your intestines absorb nutrients and process waste"]},{"name":"Polyphenols","benefits":["Feed good bacteria in your gut","Supports smooth digestion","Eases occasional constipation","Soothes bloating"]}];
         for (let index = 0; index < ingredients.length; index++) {
             const par =  index % 2 === 1 ;
             const element = ingredients[index];
